# virtuaaliviivakoodi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
tests/: test_virtuaaliviivakoodi.py  test_virtuaaliviivakoodi_deconstruct.py
virtuaaliviivakoodi/: __init__.py  virtuaaliviivakoodi.py
virtuaaliviivakoodi/constants/: __init__.py  symbol_version.py  virtuaaliviivakoodi_slice.py
virtuaaliviivakoodi/dataclasses/: __init__.py  virtuaaliviivakoodi_deconstruct.py
virtuaaliviivakoodi/deconstructors/: __init__.py  amount.py  date.py  iban.py  reference.py
virtuaaliviivakoodi/exceptions/: __init__.py
virtuaaliviivakoodi/normalizers/: __init__.py  due_date.py  euro_amount.py  iban.py  reference.py
virtuaaliviivakoodi/utils/: __init__.py  detect_symbol_version.py  remove_whitespace.py  split_euros_and_cents.py
virtuaaliviivakoodi/validators/: __init__.py  due_date.py  euro_amount.py  iban.py  length.py  reference.py
